--- a/packages/core/upload/package.json
+++ b/packages/core/upload/package.json
@@ -48,6 +48,7 @@
     "@strapi/provider-upload-local": "4.22.1",
     "@strapi/utils": "4.22.1",
     "axios": "1.6.0",
+    "busboy": "1.6.0",
     "byte-size": "7.0.1",
     "cropperjs": "1.6.0",
     "date-fns": "2.30.0",
